# gremlin-python-tutorial

./: .gitignore  .project  .travis.yml  404.html  DataStax.yaml  Neo4j.yaml  OrientDB.yaml  README.md  gt1.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run  server.yaml  setServer.py  test_000.py  test_001.py  test_002.py  test_002_tutorial.py  test_003_connection.py  test_004_io.py  test_005_graphviz.py  test_connection.py  test_tutorial.py  tio.py
.github/workflows/: build.yaml  build.yml  upload-to-pypi.yml
config/: DataStax.yaml  Neo4j.yaml  OrientDB.yaml  TinkerGraph.yaml
gremlin/: draw.py  examples.py  remote.py
scripts/: blackisort  install  installAndTest  run  runDataStax  runNeo4j  runOrientDB  test
search/: search_index.json
tests/: base_gremlin_test.py  basetest.py  jupyter.ipynb  test_000.py  test_001.py  test_002_tutorial.py  test_003_connection.py  test_004_io.py  test_005_graphviz.py  test_draw.py  test_examples.py  test_modern.py  test_server.py  test_tutorial.py
tutorial/: remote.py
